# model-forge

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: log_summary_pairs.csv
docs/churn/: feature_importance.csv  metrics.json  selection_report.txt
docs/summarizer/: examples.md  rouge.json  serve-demo.txt
notebooks/: 01_churn_fusion.ipynb  02_finetune_t5_log_summarizer.ipynb
src/model_forge/: __init__.py
src/model_forge/churn/: __init__.py  data.py  model.py  preprocess.py  selection.py  train.py
src/model_forge/summarizer/: __init__.py  api.py  corpus.py  evaluate.py  model.py  pool.py  train.py
tests/: test_api.py  test_churn_data.py  test_corpus.py  test_fusion_model.py  test_pool.py  test_preprocess.py  test_selection.py
