[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-forge"
version = "0.1.0"
description = "Two applied deep-learning studies: build a multi-input fusion network for churn; fine-tune T5 for log summarization and serve it from a pooled inference API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Syed Hassaan Saleem", email = "saleemhassaan94@gmail.com" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
churn = [
    "tensorflow>=2.16",
    "matplotlib>=3.8",
]
summarizer = [
    "transformers>=4.46",
    "torch>=2.2",
    "rouge-score>=0.1.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "accelerate>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
